--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -1,20 +1,362 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "449ff2f2-3a34-408e-a3d8-9f2bedf247b1",
+   "cell_type": "markdown",
+   "id": "703e0525-4d00-4a4e-8882-b66048a668fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Introduction \n",
+    "\n",
+    "- 76 attributes though only 14 are used (chest pain type, cholestoral, painexer, etc) \n",
+    "- predicting the presence of heart disease in the patient on a scale from 0 to 4\n",
+    "- a good technique would be to simply predict any sort of presence (1,2,3) from absence (0)\n",
+    "- heart disease prediction classification model \n",
+    "- our goal is to train a model to predict whether individuals have heart disease based on various clinical attributes using of the KNN classification algorithm \n",
+    "\n",
+    "- heart disease is a major cause of death in the world population - it causes one person to die every 34 seconds in the US, coming 229 billion dollars in medical care each year in the US \n",
+    "- machine learning takes a set of data as inputs and learns to predict output values from it \n",
+    "- the effects of a potential machine learning algorithm that could be used to predict the presence of heart disease based on risk factors like blood pressure, cholesterol, etc could revolutionize health care for heart disease patients and lead to early treatment before the disease progresses to fatal levels "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7435a49d-2103-4def-9aa5-63a9b7742332",
+   "metadata": {},
+   "source": [
+    "Preliminary Exploratory Data Analysis \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c57d264-5b5d-47da-92fc-5846d09e97cb",
+   "execution_count": 10,
+   "id": "2fc6ae16-04f7-4108-8d05-594a045566a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m2940\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m1\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (1): X1\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A spec_tbl_df: 2940 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>X1</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1254 0 40 1 1 0 0         </td></tr>\n",
+       "\t<tr><td>-9 2 140 0 289 -9 -9 -9   </td></tr>\n",
+       "\t<tr><td>0 -9 -9 0 12 16 84 0      </td></tr>\n",
+       "\t<tr><td>0 0 0 0 150 18 -9 7       </td></tr>\n",
+       "\t<tr><td>172 86 200 110 140 86 0 0 </td></tr>\n",
+       "\t<tr><td>0 -9 26 20 -9 -9 -9 -9    </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 -9 -9 12   </td></tr>\n",
+       "\t<tr><td>20 84 0 -9 -9 -9 -9 -9    </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 1 1 1      </td></tr>\n",
+       "\t<tr><td>1 1 -9. -9. name          </td></tr>\n",
+       "\t<tr><td>1255 0 49 0 1 0 0         </td></tr>\n",
+       "\t<tr><td>-9 3 160 1 180 -9 -9 -9   </td></tr>\n",
+       "\t<tr><td>0 -9 -9 0 11 16 84 0      </td></tr>\n",
+       "\t<tr><td>0 0 0 0 -9 10 9 7         </td></tr>\n",
+       "\t<tr><td>156 100 220 106 160 90 0 0</td></tr>\n",
+       "\t<tr><td>1 2 14 13 -9 -9 -9 -9     </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 -9 -9 11   </td></tr>\n",
+       "\t<tr><td>20 84 1 -9 -9 2 -9 -9     </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 1 1 1      </td></tr>\n",
+       "\t<tr><td>1 1 -9. -9. name          </td></tr>\n",
+       "\t<tr><td>1256 0 37 1 1 0 0         </td></tr>\n",
+       "\t<tr><td>-9 2 130 0 283 -9 -9 -9   </td></tr>\n",
+       "\t<tr><td>0 -9 -9 1 11 21 84 0      </td></tr>\n",
+       "\t<tr><td>0 0 0 0 100 10 -9 5       </td></tr>\n",
+       "\t<tr><td>98 58 180 100 130 80 0 0  </td></tr>\n",
+       "\t<tr><td>0 -9 17 14 -9 -9 -9 -9    </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 -9 -9 11   </td></tr>\n",
+       "\t<tr><td>26 84 0 -9 -9 -9 -9 -9    </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 1 1 1      </td></tr>\n",
+       "\t<tr><td>1 1 -9. -9. name          </td></tr>\n",
+       "\t<tr><td>⋮</td></tr>\n",
+       "\t<tr><td>5001 0 48 1 0 0 0       </td></tr>\n",
+       "\t<tr><td>-9 3 110 0 211 -9 -9 -9 </td></tr>\n",
+       "\t<tr><td>0 -9 -9 0 3 26 85 0     </td></tr>\n",
+       "\t<tr><td>0 0 0 0 125 15 -9 -9    </td></tr>\n",
+       "\t<tr><td>138 66 190 82 110 60 0 0</td></tr>\n",
+       "\t<tr><td>0 -9 10 10 -9 -9 -9 -9  </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 6 1 -9 -9 3    </td></tr>\n",
+       "\t<tr><td>28 85 0 -9 -9 -9 -9 -9  </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 1 1 1    </td></tr>\n",
+       "\t<tr><td>1 1 -9. -9. name        </td></tr>\n",
+       "\t<tr><td>5000 0 47 0 0 0 0       </td></tr>\n",
+       "\t<tr><td>-9 2 140 1 257 -9 -9 -9 </td></tr>\n",
+       "\t<tr><td>0 -9 -9 0 3 3 86 0      </td></tr>\n",
+       "\t<tr><td>0 0 0 0 50 6 5.5 4      </td></tr>\n",
+       "\t<tr><td>135 84 150 90 140 90 0 0</td></tr>\n",
+       "\t<tr><td>1 1 14 13 -9 -9 -9 -9   </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 -9 -9 3  </td></tr>\n",
+       "\t<tr><td>6 86 0 -9 -9 -9 -9 -9   </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 1 1 1    </td></tr>\n",
+       "\t<tr><td>1 1 -9. -9. name        </td></tr>\n",
+       "\t<tr><td>5002 0 53 1 1 1 1       </td></tr>\n",
+       "\t<tr><td>-9 4 130 0 182 -9 -9 -9 </td></tr>\n",
+       "\t<tr><td>0 -9 -9 0 8 3 84 0      </td></tr>\n",
+       "\t<tr><td>0 0 0 0 75 13 -9 6      </td></tr>\n",
+       "\t<tr><td>148 80 200 92 130 80 0 0</td></tr>\n",
+       "\t<tr><td>0 -9 13 12 -9 -9 -9 -9  </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 -9 -9 -9 -9 8  </td></tr>\n",
+       "\t<tr><td>5 84 0 -9 -9 -9 -9 -9   </td></tr>\n",
+       "\t<tr><td>-9 -9 -9 1 1 1 1 1      </td></tr>\n",
+       "\t<tr><td>1 1 -9. -9. name        </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A spec\\_tbl\\_df: 2940 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " X1\\\\\n",
+       " <chr>\\\\\n",
+       "\\hline\n",
+       "\t 1254 0 40 1 1 0 0         \\\\\n",
+       "\t -9 2 140 0 289 -9 -9 -9   \\\\\n",
+       "\t 0 -9 -9 0 12 16 84 0      \\\\\n",
+       "\t 0 0 0 0 150 18 -9 7       \\\\\n",
+       "\t 172 86 200 110 140 86 0 0 \\\\\n",
+       "\t 0 -9 26 20 -9 -9 -9 -9    \\\\\n",
+       "\t -9 -9 -9 -9 -9 -9 -9 12   \\\\\n",
+       "\t 20 84 0 -9 -9 -9 -9 -9    \\\\\n",
+       "\t -9 -9 -9 -9 -9 1 1 1      \\\\\n",
+       "\t 1 1 -9. -9. name          \\\\\n",
+       "\t 1255 0 49 0 1 0 0         \\\\\n",
+       "\t -9 3 160 1 180 -9 -9 -9   \\\\\n",
+       "\t 0 -9 -9 0 11 16 84 0      \\\\\n",
+       "\t 0 0 0 0 -9 10 9 7         \\\\\n",
+       "\t 156 100 220 106 160 90 0 0\\\\\n",
+       "\t 1 2 14 13 -9 -9 -9 -9     \\\\\n",
+       "\t -9 -9 -9 -9 -9 -9 -9 11   \\\\\n",
+       "\t 20 84 1 -9 -9 2 -9 -9     \\\\\n",
+       "\t -9 -9 -9 -9 -9 1 1 1      \\\\\n",
+       "\t 1 1 -9. -9. name          \\\\\n",
+       "\t 1256 0 37 1 1 0 0         \\\\\n",
+       "\t -9 2 130 0 283 -9 -9 -9   \\\\\n",
+       "\t 0 -9 -9 1 11 21 84 0      \\\\\n",
+       "\t 0 0 0 0 100 10 -9 5       \\\\\n",
+       "\t 98 58 180 100 130 80 0 0  \\\\\n",
+       "\t 0 -9 17 14 -9 -9 -9 -9    \\\\\n",
+       "\t -9 -9 -9 -9 -9 -9 -9 11   \\\\\n",
+       "\t 26 84 0 -9 -9 -9 -9 -9    \\\\\n",
+       "\t -9 -9 -9 -9 -9 1 1 1      \\\\\n",
+       "\t 1 1 -9. -9. name          \\\\\n",
+       "\t ⋮\\\\\n",
+       "\t 5001 0 48 1 0 0 0       \\\\\n",
+       "\t -9 3 110 0 211 -9 -9 -9 \\\\\n",
+       "\t 0 -9 -9 0 3 26 85 0     \\\\\n",
+       "\t 0 0 0 0 125 15 -9 -9    \\\\\n",
+       "\t 138 66 190 82 110 60 0 0\\\\\n",
+       "\t 0 -9 10 10 -9 -9 -9 -9  \\\\\n",
+       "\t -9 -9 -9 6 1 -9 -9 3    \\\\\n",
+       "\t 28 85 0 -9 -9 -9 -9 -9  \\\\\n",
+       "\t -9 -9 -9 -9 -9 1 1 1    \\\\\n",
+       "\t 1 1 -9. -9. name        \\\\\n",
+       "\t 5000 0 47 0 0 0 0       \\\\\n",
+       "\t -9 2 140 1 257 -9 -9 -9 \\\\\n",
+       "\t 0 -9 -9 0 3 3 86 0      \\\\\n",
+       "\t 0 0 0 0 50 6 5.5 4      \\\\\n",
+       "\t 135 84 150 90 140 90 0 0\\\\\n",
+       "\t 1 1 14 13 -9 -9 -9 -9   \\\\\n",
+       "\t -9 -9 -9 -9 -9 -9 -9 3  \\\\\n",
+       "\t 6 86 0 -9 -9 -9 -9 -9   \\\\\n",
+       "\t -9 -9 -9 -9 -9 1 1 1    \\\\\n",
+       "\t 1 1 -9. -9. name        \\\\\n",
+       "\t 5002 0 53 1 1 1 1       \\\\\n",
+       "\t -9 4 130 0 182 -9 -9 -9 \\\\\n",
+       "\t 0 -9 -9 0 8 3 84 0      \\\\\n",
+       "\t 0 0 0 0 75 13 -9 6      \\\\\n",
+       "\t 148 80 200 92 130 80 0 0\\\\\n",
+       "\t 0 -9 13 12 -9 -9 -9 -9  \\\\\n",
+       "\t -9 -9 -9 -9 -9 -9 -9 8  \\\\\n",
+       "\t 5 84 0 -9 -9 -9 -9 -9   \\\\\n",
+       "\t -9 -9 -9 1 1 1 1 1      \\\\\n",
+       "\t 1 1 -9. -9. name        \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A spec_tbl_df: 2940 × 1\n",
+       "\n",
+       "| X1 &lt;chr&gt; |\n",
+       "|---|\n",
+       "| 1254 0 40 1 1 0 0          |\n",
+       "| -9 2 140 0 289 -9 -9 -9    |\n",
+       "| 0 -9 -9 0 12 16 84 0       |\n",
+       "| 0 0 0 0 150 18 -9 7        |\n",
+       "| 172 86 200 110 140 86 0 0  |\n",
+       "| 0 -9 26 20 -9 -9 -9 -9     |\n",
+       "| -9 -9 -9 -9 -9 -9 -9 12    |\n",
+       "| 20 84 0 -9 -9 -9 -9 -9     |\n",
+       "| -9 -9 -9 -9 -9 1 1 1       |\n",
+       "| 1 1 -9. -9. name           |\n",
+       "| 1255 0 49 0 1 0 0          |\n",
+       "| -9 3 160 1 180 -9 -9 -9    |\n",
+       "| 0 -9 -9 0 11 16 84 0       |\n",
+       "| 0 0 0 0 -9 10 9 7          |\n",
+       "| 156 100 220 106 160 90 0 0 |\n",
+       "| 1 2 14 13 -9 -9 -9 -9      |\n",
+       "| -9 -9 -9 -9 -9 -9 -9 11    |\n",
+       "| 20 84 1 -9 -9 2 -9 -9      |\n",
+       "| -9 -9 -9 -9 -9 1 1 1       |\n",
+       "| 1 1 -9. -9. name           |\n",
+       "| 1256 0 37 1 1 0 0          |\n",
+       "| -9 2 130 0 283 -9 -9 -9    |\n",
+       "| 0 -9 -9 1 11 21 84 0       |\n",
+       "| 0 0 0 0 100 10 -9 5        |\n",
+       "| 98 58 180 100 130 80 0 0   |\n",
+       "| 0 -9 17 14 -9 -9 -9 -9     |\n",
+       "| -9 -9 -9 -9 -9 -9 -9 11    |\n",
+       "| 26 84 0 -9 -9 -9 -9 -9     |\n",
+       "| -9 -9 -9 -9 -9 1 1 1       |\n",
+       "| 1 1 -9. -9. name           |\n",
+       "| ⋮ |\n",
+       "| 5001 0 48 1 0 0 0        |\n",
+       "| -9 3 110 0 211 -9 -9 -9  |\n",
+       "| 0 -9 -9 0 3 26 85 0      |\n",
+       "| 0 0 0 0 125 15 -9 -9     |\n",
+       "| 138 66 190 82 110 60 0 0 |\n",
+       "| 0 -9 10 10 -9 -9 -9 -9   |\n",
+       "| -9 -9 -9 6 1 -9 -9 3     |\n",
+       "| 28 85 0 -9 -9 -9 -9 -9   |\n",
+       "| -9 -9 -9 -9 -9 1 1 1     |\n",
+       "| 1 1 -9. -9. name         |\n",
+       "| 5000 0 47 0 0 0 0        |\n",
+       "| -9 2 140 1 257 -9 -9 -9  |\n",
+       "| 0 -9 -9 0 3 3 86 0       |\n",
+       "| 0 0 0 0 50 6 5.5 4       |\n",
+       "| 135 84 150 90 140 90 0 0 |\n",
+       "| 1 1 14 13 -9 -9 -9 -9    |\n",
+       "| -9 -9 -9 -9 -9 -9 -9 3   |\n",
+       "| 6 86 0 -9 -9 -9 -9 -9    |\n",
+       "| -9 -9 -9 -9 -9 1 1 1     |\n",
+       "| 1 1 -9. -9. name         |\n",
+       "| 5002 0 53 1 1 1 1        |\n",
+       "| -9 4 130 0 182 -9 -9 -9  |\n",
+       "| 0 -9 -9 0 8 3 84 0       |\n",
+       "| 0 0 0 0 75 13 -9 6       |\n",
+       "| 148 80 200 92 130 80 0 0 |\n",
+       "| 0 -9 13 12 -9 -9 -9 -9   |\n",
+       "| -9 -9 -9 -9 -9 -9 -9 8   |\n",
+       "| 5 84 0 -9 -9 -9 -9 -9    |\n",
+       "| -9 -9 -9 1 1 1 1 1       |\n",
+       "| 1 1 -9. -9. name         |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     X1                        \n",
+       "1    1254 0 40 1 1 0 0         \n",
+       "2    -9 2 140 0 289 -9 -9 -9   \n",
+       "3    0 -9 -9 0 12 16 84 0      \n",
+       "4    0 0 0 0 150 18 -9 7       \n",
+       "5    172 86 200 110 140 86 0 0 \n",
+       "6    0 -9 26 20 -9 -9 -9 -9    \n",
+       "7    -9 -9 -9 -9 -9 -9 -9 12   \n",
+       "8    20 84 0 -9 -9 -9 -9 -9    \n",
+       "9    -9 -9 -9 -9 -9 1 1 1      \n",
+       "10   1 1 -9. -9. name          \n",
+       "11   1255 0 49 0 1 0 0         \n",
+       "12   -9 3 160 1 180 -9 -9 -9   \n",
+       "13   0 -9 -9 0 11 16 84 0      \n",
+       "14   0 0 0 0 -9 10 9 7         \n",
+       "15   156 100 220 106 160 90 0 0\n",
+       "16   1 2 14 13 -9 -9 -9 -9     \n",
+       "17   -9 -9 -9 -9 -9 -9 -9 11   \n",
+       "18   20 84 1 -9 -9 2 -9 -9     \n",
+       "19   -9 -9 -9 -9 -9 1 1 1      \n",
+       "20   1 1 -9. -9. name          \n",
+       "21   1256 0 37 1 1 0 0         \n",
+       "22   -9 2 130 0 283 -9 -9 -9   \n",
+       "23   0 -9 -9 1 11 21 84 0      \n",
+       "24   0 0 0 0 100 10 -9 5       \n",
+       "25   98 58 180 100 130 80 0 0  \n",
+       "26   0 -9 17 14 -9 -9 -9 -9    \n",
+       "27   -9 -9 -9 -9 -9 -9 -9 11   \n",
+       "28   26 84 0 -9 -9 -9 -9 -9    \n",
+       "29   -9 -9 -9 -9 -9 1 1 1      \n",
+       "30   1 1 -9. -9. name          \n",
+       "⋮    ⋮                         \n",
+       "2911 5001 0 48 1 0 0 0         \n",
+       "2912 -9 3 110 0 211 -9 -9 -9   \n",
+       "2913 0 -9 -9 0 3 26 85 0       \n",
+       "2914 0 0 0 0 125 15 -9 -9      \n",
+       "2915 138 66 190 82 110 60 0 0  \n",
+       "2916 0 -9 10 10 -9 -9 -9 -9    \n",
+       "2917 -9 -9 -9 6 1 -9 -9 3      \n",
+       "2918 28 85 0 -9 -9 -9 -9 -9    \n",
+       "2919 -9 -9 -9 -9 -9 1 1 1      \n",
+       "2920 1 1 -9. -9. name          \n",
+       "2921 5000 0 47 0 0 0 0         \n",
+       "2922 -9 2 140 1 257 -9 -9 -9   \n",
+       "2923 0 -9 -9 0 3 3 86 0        \n",
+       "2924 0 0 0 0 50 6 5.5 4        \n",
+       "2925 135 84 150 90 140 90 0 0  \n",
+       "2926 1 1 14 13 -9 -9 -9 -9     \n",
+       "2927 -9 -9 -9 -9 -9 -9 -9 3    \n",
+       "2928 6 86 0 -9 -9 -9 -9 -9     \n",
+       "2929 -9 -9 -9 -9 -9 1 1 1      \n",
+       "2930 1 1 -9. -9. name          \n",
+       "2931 5002 0 53 1 1 1 1         \n",
+       "2932 -9 4 130 0 182 -9 -9 -9   \n",
+       "2933 0 -9 -9 0 8 3 84 0        \n",
+       "2934 0 0 0 0 75 13 -9 6        \n",
+       "2935 148 80 200 92 130 80 0 0  \n",
+       "2936 0 -9 13 12 -9 -9 -9 -9    \n",
+       "2937 -9 -9 -9 -9 -9 -9 -9 8    \n",
+       "2938 5 84 0 -9 -9 -9 -9 -9     \n",
+       "2939 -9 -9 -9 1 1 1 1 1        \n",
+       "2940 1 1 -9. -9. name          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "library(tidyverse)\n",
+    "\n",
+    "heart_data <- read_delim(\"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/hungarian.data\", delim = \",\", col_names = FALSE)\n",
+    "heart_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "423ba2ba-f3e3-477d-90a1-83ec5796f013",
+   "metadata": {},
+   "source": [
+    "Methods \n",
+    "\n",
+    "- will conduct the data analysis by tidying the data, scaling the predictor variable data and then creating a recipe that can be used within the model \n",
+    "- classifier will be based on chest pain, blood pressure, resting electrocardiographic results, num (need to state reasons why we chose those variables) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42bba1e-cfa7-4bf6-a70c-4904da474bf4",
+   "metadata": {},
+   "source": [
+    "Expected Outcomes and Significance \n",
+    "\n",
+    "- we expect to find that the classifier will predict individuals with variables that have ________ (based on our research on heart disease, what scale for each of the variables would lead to a prediction of positive for heart disease) \n",
+    "- \n",
+    "- future questions could be asking whether two diseases are correlated and using a model to predict that???\n",
+    "- significance by offering easier, faster and more accurate diagnosis without the need for diagnosis by a clinical practitioner, can prevent life threats and allow for early treatment among patients that have risk factors "
+   ]
   }
  ],
  "metadata": {
