fixed some spelling

--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -1278,7 +1278,7 @@
    "source": [
     "**METHODS**\n",
     "\n",
-    "We will create our model by scaling the predictor variables, creating a recipe, and training the model on the training data. Our classifier will be based on the following predictor variables: age, resting bloodpressure, serum cholestoral, and maximum heart rate. After tuning the model for the most accurate K value 5-fold using cross validation we will train the model on the the training set and then use it to predict the classes of the testing set to test its accuracy. "
+    "We will create our model by scaling the predictor variables, creating a recipe, and training the model on the training data. Our classifier will be based on the following predictor variables: age, resting bloodpressure, serum cholestoral, and maximum heart rate. After tuning the model for the most accurate K value 5-fold using cross validation we will train the model on the training set and then use it to predict the classes of the testing set to test its accuracy. "
    ]
   },
   {
@@ -1294,6 +1294,14 @@
     "\n",
     "This model is significant because it provides the opportunity to provide easier, faster and more accurate diagnosis without the need for diagnosis by a clinical practitioner? and can prevent life threats by predicting presence of heart disease based on risk factors like high blood pressure. Early diagnosis could potentially revolutionize health care for heart disease patients with risk factors by allowing for early treatment/care before the disease progresses to fatal levels. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a7058f2-211c-40b9-8ee5-155da8854cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
