Changed some text to comments

--- a/Project Proposal.ipynb
+++ b/Project Proposal.ipynb
@@ -29,14 +29,12 @@
    "id": "fb99c66c",
    "metadata": {},
    "source": [
-    "**PRELIMINARY DATA ANALYSIS**\n",
-    "\n",
-    "We begin by loading the data set into R and adding column names. "
+    "**PRELIMINARY DATA ANALYSIS**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "975ec8f3",
    "metadata": {},
    "outputs": [
@@ -71,7 +69,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
       "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m294\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m14\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
@@ -161,6 +159,7 @@
     }
    ],
    "source": [
+    "#We begin by loading the data set into R and adding column names. \n",
     "library(tidyverse)\n",
     "library(tidymodels)\n",
     "set.seed(123)\n",
@@ -188,14 +187,6 @@
     "    mutate(across(c(resting_blood_pressure), as.numeric))\n",
     "\n",
     "head(heart_data_renamed)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14629a3e-3294-40e0-9cff-5d65cc4e5dc2",
-   "metadata": {},
-   "source": [
-    "We can create a new dataframe with the age, resting blood pressure, blood cholestoral, maximum heart rate, and diagnosis variables and filter out the observations with missing values. We choose to examine these variables because they are numeric and have minimal missing values.  "
    ]
   },
   {
@@ -266,18 +257,12 @@
     }
    ],
    "source": [
+    "#We can create a new dataframe with the age, resting blood pressure, blood cholestoral, maximum heart rate, and diagnosis variables and filter out the observations with missing values. We choose to examine these variables because they are numeric and have minimal missing values.  \n",
+    "\n",
     "tidy_heart_data <- heart_data_renamed  |>\n",
     "    select(age, resting_blood_pressure, serum_cholestoral, max_heart_rate, diagnosis) |>\n",
     "    filter(age != \"?\", resting_blood_pressure != \"?\", serum_cholestoral != \"?\", max_heart_rate != \"?\", diagnosis != \"?\")\n",
     "head(tidy_heart_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "328e3cc2",
-   "metadata": {},
-   "source": [
-    "We can divide our dataset into a training and testing set using set.seed for a random yet reproducible split. "
    ]
   },
   {
@@ -308,19 +293,13 @@
     }
    ],
    "source": [
+    "#We can divide our dataset into a training and testing set using set.seed for a random yet reproducible split. \n",
+    "\n",
     "split_heart_data <- initial_split(tidy_heart_data, prop = 0.75, strata = diagnosis)\n",
     "training_heart_data <- training(split_heart_data)\n",
     "testing_heart_data <- testing(split_heart_data)\n",
     "glimpse(training_heart_data) \n",
     "glimpse(testing_heart_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3f8dbdc",
-   "metadata": {},
-   "source": [
-    "We can now use the training data to create a summary table that shows the number and percentage of observations that do and do not have a heart disease diagnosis. "
    ]
   },
   {
@@ -375,19 +354,13 @@
     }
    ],
    "source": [
+    "#We can now use the training data to create a summary table that shows the number and percentage of observations that do and do not have a heart disease diagnosis. \n",
+    "\n",
     "summary_heart_data <- training_heart_data|>\n",
     "    group_by(diagnosis)|>\n",
     "    summarize(Count=n())|>\n",
     "    mutate(Percent = Count/201)\n",
     "summary_heart_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ead6d91-10ce-4313-8dcc-4f780494591f",
-   "metadata": {},
-   "source": [
-    "We can create a summary table of means for the potential predictor variables. "
    ]
   },
   {
@@ -438,6 +411,8 @@
     }
    ],
    "source": [
+    "#We can create a summary table of means for the potential predictor variables. \n",
+    "\n",
     "summary_heart_data_2 <- training_heart_data |>\n",
     "    summarize(mean_age = mean(age, na.rm = TRUE), \n",
     "                mean_blood_pressure = mean(as.numeric(resting_blood_pressure), na.rm = TRUE),\n",
