added clustering to how model could be improved

--- a/report.ipynb
+++ b/report.ipynb
@@ -1521,7 +1521,7 @@
    "id": "ebd8bc56-58d6-44fe-864e-71d38f29e1dd",
    "metadata": {},
    "source": [
-    "This confusion matrix tells us that 42 predictions were correct and 27 were predicted incorrectly out of a total of 69 predictions. This model has an accuracy of 60.87%. There were 20 patients with heart disease that were predicted to not have it which is a large amount of misses (20 missed out of the 26 patients with heart disease in the testing data). On the other hand there were only 7 of the 43 patients without heart disease that were predicted to have it. This means our data is conservtive when it comes to predicting the presence of heart disease and tends toward predicting no heart disease.  "
+    "This confusion matrix tells us that 42 predictions were correct and 27 were predicted incorrectly out of a total of 69 predictions. This model has an accuracy of 60.87%. There were 20 patients with heart disease that were predicted to not have it which is a large amount of misses (20 missed out of the 26 patients with heart disease in the testing data). On the other hand there were only 7 out of the 43 patients without heart disease that were predicted to have it. This means our model tends toward predicting no heart disease.  "
    ]
   },
   {
