no actual changes

--- a/report.ipynb
+++ b/report.ipynb
@@ -1533,7 +1533,9 @@
     "\n",
     "We expect our classification model to accurately predict whether individuals have heart disease based on age and maximum heart rate. This is significant because it will provide faster and more accurate diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could revolutionize healthcare through early administration of treatment regimens. \n",
     "\n",
-    "Further questions include whether other variables aside from those in the Hungarian data set contribute to heart disease and could improve the accuracy of our model. We could also question whether incorporating data from other countries into our model would increase it's accuracy.\n"
+    "Further questions include whether other variables aside from those in the Hungarian data set contribute to heart disease and could improve the accuracy of our model. We could also question whether incorporating data from other countries into our model would increase it's accuracy.\n",
+    "\n",
+    "To improve our model we could look at the clustering data for the variables to pick variables that show the most clear differences between those with and without heart disease.\n"
    ]
   },
   {
