wrote the discussion

--- a/Project Report Final.ipynb
+++ b/Project Report Final.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "id": "6382d8c1",
    "metadata": {},
    "outputs": [
@@ -280,12 +280,12 @@
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>31</td><td>100</td><td>219</td><td>150</td><td>0</td></tr>\n",
        "\t<tr><td>32</td><td>105</td><td>198</td><td>165</td><td>0</td></tr>\n",
-       "\t<tr><td>32</td><td>110</td><td>225</td><td>184</td><td>0</td></tr>\n",
        "\t<tr><td>32</td><td>125</td><td>254</td><td>155</td><td>0</td></tr>\n",
        "\t<tr><td>33</td><td>120</td><td>298</td><td>185</td><td>0</td></tr>\n",
        "\t<tr><td>34</td><td>130</td><td>161</td><td>190</td><td>0</td></tr>\n",
+       "\t<tr><td>34</td><td>150</td><td>214</td><td>168</td><td>0</td></tr>\n",
+       "\t<tr><td>34</td><td> 98</td><td>220</td><td>150</td><td>0</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -295,12 +295,12 @@
        " age & resting\\_blood\\_pressure & serum\\_cholestoral & max\\_heart\\_rate & diagnosis\\\\\n",
        " <dbl> & <dbl> & <chr> & <chr> & <fct>\\\\\n",
        "\\hline\n",
-       "\t 31 & 100 & 219 & 150 & 0\\\\\n",
        "\t 32 & 105 & 198 & 165 & 0\\\\\n",
-       "\t 32 & 110 & 225 & 184 & 0\\\\\n",
        "\t 32 & 125 & 254 & 155 & 0\\\\\n",
        "\t 33 & 120 & 298 & 185 & 0\\\\\n",
        "\t 34 & 130 & 161 & 190 & 0\\\\\n",
+       "\t 34 & 150 & 214 & 168 & 0\\\\\n",
+       "\t 34 &  98 & 220 & 150 & 0\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -309,22 +309,22 @@
        "\n",
        "| age &lt;dbl&gt; | resting_blood_pressure &lt;dbl&gt; | serum_cholestoral &lt;chr&gt; | max_heart_rate &lt;chr&gt; | diagnosis &lt;fct&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| 31 | 100 | 219 | 150 | 0 |\n",
        "| 32 | 105 | 198 | 165 | 0 |\n",
-       "| 32 | 110 | 225 | 184 | 0 |\n",
        "| 32 | 125 | 254 | 155 | 0 |\n",
        "| 33 | 120 | 298 | 185 | 0 |\n",
        "| 34 | 130 | 161 | 190 | 0 |\n",
+       "| 34 | 150 | 214 | 168 | 0 |\n",
+       "| 34 |  98 | 220 | 150 | 0 |\n",
        "\n"
       ],
       "text/plain": [
        "  age resting_blood_pressure serum_cholestoral max_heart_rate diagnosis\n",
-       "1 31  100                    219               150            0        \n",
-       "2 32  105                    198               165            0        \n",
-       "3 32  110                    225               184            0        \n",
-       "4 32  125                    254               155            0        \n",
-       "5 33  120                    298               185            0        \n",
-       "6 34  130                    161               190            0        "
+       "1 32  105                    198               165            0        \n",
+       "2 32  125                    254               155            0        \n",
+       "3 33  120                    298               185            0        \n",
+       "4 34  130                    161               190            0        \n",
+       "5 34  150                    214               168            0        \n",
+       "6 34   98                    220               150            0        "
       ]
      },
      "metadata": {},
@@ -343,9 +343,9 @@
        "\t<tr><td>28</td><td>130</td><td>132</td><td>185</td><td>0</td></tr>\n",
        "\t<tr><td>29</td><td>120</td><td>243</td><td>160</td><td>0</td></tr>\n",
        "\t<tr><td>30</td><td>170</td><td>237</td><td>170</td><td>0</td></tr>\n",
-       "\t<tr><td>34</td><td>150</td><td>214</td><td>168</td><td>0</td></tr>\n",
+       "\t<tr><td>31</td><td>100</td><td>219</td><td>150</td><td>0</td></tr>\n",
+       "\t<tr><td>32</td><td>110</td><td>225</td><td>184</td><td>0</td></tr>\n",
        "\t<tr><td>35</td><td>150</td><td>264</td><td>168</td><td>0</td></tr>\n",
-       "\t<tr><td>36</td><td>130</td><td>209</td><td>178</td><td>0</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -358,9 +358,9 @@
        "\t 28 & 130 & 132 & 185 & 0\\\\\n",
        "\t 29 & 120 & 243 & 160 & 0\\\\\n",
        "\t 30 & 170 & 237 & 170 & 0\\\\\n",
-       "\t 34 & 150 & 214 & 168 & 0\\\\\n",
+       "\t 31 & 100 & 219 & 150 & 0\\\\\n",
+       "\t 32 & 110 & 225 & 184 & 0\\\\\n",
        "\t 35 & 150 & 264 & 168 & 0\\\\\n",
-       "\t 36 & 130 & 209 & 178 & 0\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -372,9 +372,9 @@
        "| 28 | 130 | 132 | 185 | 0 |\n",
        "| 29 | 120 | 243 | 160 | 0 |\n",
        "| 30 | 170 | 237 | 170 | 0 |\n",
-       "| 34 | 150 | 214 | 168 | 0 |\n",
+       "| 31 | 100 | 219 | 150 | 0 |\n",
+       "| 32 | 110 | 225 | 184 | 0 |\n",
        "| 35 | 150 | 264 | 168 | 0 |\n",
-       "| 36 | 130 | 209 | 178 | 0 |\n",
        "\n"
       ],
       "text/plain": [
@@ -382,9 +382,9 @@
        "1 28  130                    132               185            0        \n",
        "2 29  120                    243               160            0        \n",
        "3 30  170                    237               170            0        \n",
-       "4 34  150                    214               168            0        \n",
-       "5 35  150                    264               168            0        \n",
-       "6 36  130                    209               178            0        "
+       "4 31  100                    219               150            0        \n",
+       "5 32  110                    225               184            0        \n",
+       "6 35  150                    264               168            0        "
       ]
      },
      "metadata": {},
@@ -1381,7 +1381,7 @@
    "id": "ebd8bc56-58d6-44fe-864e-71d38f29e1dd",
    "metadata": {},
    "source": [
-    "This confusion matrix tells us that 42 predictions were correct and 27 were incorrect out of a total of 69 predictions. There were 17 patients with heart disease that were predicted to not have heart disease which is a large amount of misses (17 missed out of the 27 patients with heart disease in the testing data). On the other hand there were only 10 out of the 43 patients without heart disease that were predicted to have it. This means our model tends toward predicting no heart disease and will miss diagnosing a lot of patients who do have heart disease."
+    "This confusion matrix tells us that the model correctly predicted the true class of 42 observations and incorrectly predicted the true class of 27 observations in the testing data. There were 33 observations that were correctly predicted to not have heart disease and 9 observations that were correctly predicted to have heart disease. On the other hand, there were 17 observations with heart disease that were incorrectly predicted to not have heart disease (false negative) and 11 observations that did not have heart disease that were incorrectly predicted to have heart disease (false positive). This is a large number of errors, especially when the presence of heart disease is incorrectly overlooked. Our model tends towards predicting no heart disease, meaning it will fail to diagnose more patients that have heart disease than it will to wrongly diagnose heart disease. "
    ]
   },
   {
@@ -1462,13 +1462,9 @@
    "id": "838acd96-b537-4c8d-9f61-38eb5aa3f2ed",
    "metadata": {},
    "source": [
-    "This graph shows same information as the confusion matrix.\n",
+    "This graph shows same information as the confusion matrix. The bar on the left shows that the total number of observations in the testing data with a true class of no heart disease (value = 0) was 43. Out of these, the model incorrectly predicted 10 observations to have heart disease (false positive) and that 33 observations were correctly predicted to have heart disease. The model correctly predicted that 36 of these observations have no heart disease. The bar on the right shows that the total number of observations with a true class of heart disease (value = 1) is 26. Out of these, the model incorrectly predicted 17 observations had no heart disease (false negative) and 9 observations were correctly predicted to have heart disease.\n",
     "\n",
-    "The bar on the left shows that the total number of observations with a true class of no heart disease (value = 0) is 43. Out of these observations, the model predicted that 7 of these observations were incorrectly predicted to have heart disease. The model correctly predicted that 36 of these observations have no heart disease.\n",
-    "\n",
-    "The bar on the right shows that the total number of observations with a true class of heart disease (value = 1_ is 26. Out of these observations, the model incorrectly predicted that 21 of them had no heart disease. The model correctly predicted that 5 of them have heart disease. \n",
-    "\n",
-    "This means that the model is better at predicting on new observations that do not have heart disease than it is at predicting on new observations that have heart disease. This has implications for the application of this model becuase it is worse in a clinical setting to incorrectly predict that a patient has no heart disease when they really do have heart disease. \n"
+    "This means that the model is better at predicting on new observations that do not have heart disease than it is at predicting on new observations that have heart disease. In a clinical setting, this is significantly worse becuase it is more dangerous to incorrectly predict that a patient has no heart disease when they really do have heart disease. \n"
    ]
   },
   {
@@ -1478,22 +1474,13 @@
    "source": [
     "**OUTCOMES AND SIGNIFICANCE** \n",
     "\n",
-    "In conclusion, our model has an accuracy of 60.85% when tested on the testing data. We can compare this to the majority classifier to determine whether its performance is significant. The majority clasifier would always predict new observations to have no heart disease with an accuracy of 62.66%. While our model has a higher accuracy than the majority classifier, it does not have a high accuracy when considering its implication in health care. The model incorrectly predicted 17 out of the observations that had heart disease to not have heart disease, which can be dangerous when applied to patients whose diagnosis might be overlooked due to an error like this. \n",
+    "In conclusion, our trained model has an accuracy of 60.85% when tested on the testing data. We can compare this to the majority classifier to assess its performance, which always predicts the majority class label even if the predictor variables indicate otherwise. In regards to our training data, the majority clasifier would always predict new observations to have no heart disease with an accuracy of 62.66% because the majority of observations in the training data do not have heart disease. Unfortunately, our model has a lower accuracy than the majority classifier. This means that a model that predicts the class of no heart disease for every new observation would be more accurate to the true class compared to the model that we trained using the selected predictor variables. There are several potential reasons why our model has a lower accuracy. Firstly, the dataset is relatively small and there are not many observations on which to train and predict an accurate model. Secondly, there was a weak correlation between the predictor variables in relation to the diagnosis, as shown in the scatterplots, which could have made the majority vote in the knn classification less likely to be accurate to the true class of the observation. It was not necessarily clear whether high cholesterol or lower maximum heart rate indicated a higher risk of heart disease because the datapoints were relatively evenly distributed and there were several outliars. Thirdly, choosing 11 neighbours when there were only 201 observations in the training data could have caused underfitting. This occurs when too many of the training observations help to determine the class of the new observations, resulting an averaging effect where the boundary between classes becomes less distinct; the model isn't influenced enough by the training data and will not predict well on new data. \n",
     "\n",
-    "*not a good model \n",
+    "We expected that our classification model would accurately predict whether individuals have heart disease based on its relationship to age and maximum heart rate, as shown in the scatterplots. However, according to the confusion matrix, the model made 17 false negatives and 10 false positives. Both false positive and false negatives can have detrimental effects when applied to health care. If a new patient were to be incorrectly diagnosed to have heart disease by the model, it could cause the patient to be worried and given medication without warrant. Similarly, if a new patient were to be incorrectly diagnosed to not have heart disease, it could cause them to not recieve proper medical attention and could result in death. However, if the model were able to correctly predict the presence of heart disease with a high accuracy, it would provide faster and more accurate diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could revolutionize healthcare through early administration of treatment regimens. With further improvement, this model could be used to diagnose the risk of heart disease. To improve our model, we could cluster the data using the kmeans clustering algorithm to better determine the relationship between the predictor variables and the diagnosis, which may have not been clear with the scatterplots. Another way we could improve the model is to use 10 fold cross validation instead of 5 fold cross validation to get a more accurate estimate of the accuracies to choose a more optimal K value, though this would results in a higher computation time and require a faster computer. Further, we could change the split to have more data in the testing set so that we can get a better estimate of its performance, or get new observations to test on so that the entire dataset could be used to train the model. \n",
     "\n",
-    "We expect our classification model to accurately predict whether individuals have heart disease based on age and maximum heart rate. This is significant because it will provide faster and more accurate diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could revolutionize healthcare through early administration of treatment regimens. \n",
+    "Further data analysis questions include whether other variables aside from those in the Hungarian data set contribute to heart disease and could improve the accuracy of our model. We could also question whether incorporating data from other countries into our model would increase its accuracy. Lastly, we could question how this algorithm could be used clinically to diagnose heart disease. \n",
     "\n",
-    "*getting more training data \n",
-    "\n",
-    "*improve the accuracy by familaraizing the diagnosis symptom. and also maybe we can take more relative variables into our model to improve the comprehensive analyzinng ability\n",
-    "\n",
-    "\n",
-    "With further improvement, this model could be used to diagnose the risk of heart disease \n",
-    "\n",
-    "Further questions include whether other variables aside from those in the Hungarian data set contribute to heart disease and could improve the accuracy of our model. We could also question whether incorporating data from other countries into our model would increase it's accuracy.\n",
-    "\n",
-    "To improve our model we could look at the clustering data for the variables to pick variables that show the most clear differences between those with and without heart disease. Another way we could improve the model is to use 10 fold cross validation instead, though this would require a higher computation time. Further, we could change the split to have more data in the testing set so that we can get a better estimate of its performance. \n"
+    "*improve the accuracy by familaraizing the diagnosis symptom. and also maybe we can take more relative variables into our model to improve the comprehensive analyzinng ability"
    ]
   },
   {
